[tool.poetry]
name = "semantic_seg"
version = "0.1.0"
description = ""
authors = ["Danielle Ben Bashat <daniellebenba@gmail.com>"]
readme = "README.md"
packages = [{include = "semantic_seg"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.25.0"
code-loader = "^1.0.18"
matplotlib = "^3.7.1"
google-cloud-storage = "^2.10.0"
tensorflow = "^2.15.0"
transformers = "^4.35.2"
torch = "^2.1.1"
onnx = "^1.15.0"
kili = "^2.148.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_integration"
